syntax = "proto3";

option java_multiple_files = true;
option java_package = "demo.grpc";
option java_outer_classname = "DemoGrpcTests";
option objc_class_prefix = "HLW";

package demo.grpc;

service DemoGrpcTestsService {
  rpc saveDynamoDb(DemoGrpcTestsRequest) returns (DemoGrpcTestsResponse) {}
}

message DemoGrpcTestsRequest {
  reserved "nenhum", "null";
  string name = 1;
  repeated string phone = 2 ; //int32 [packed=true]
  string email = 3;
}

message DemoGrpcTestsResponse {
  string message = 1;
}